[package]
name = "ws-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"]}
futures = "0.3.21"
futures-sink = "0.3.21"
http = "0.2.6"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["ansi"] }
tracing-appender = "0.2.1"
tungstenite = "0.17"